--- a/src/app/styles/themes/dark.css
+++ b/src/app/styles/themes/dark.css
@@ -1,63 +1,33 @@
 .dark {
-  --md-sys-color-primary: rgb(187 195 255);
-  --md-sys-color-surface-tint: rgb(187 195 255);
-  --md-sys-color-on-primary: rgb(35 44 97);
-  --md-sys-color-primary-container: rgb(58 67 121);
-  --md-sys-color-on-primary-container: rgb(222 224 255);
-  --md-sys-color-secondary: rgb(195 197 221);
-  --md-sys-color-on-secondary: rgb(45 47 66);
-  --md-sys-color-secondary-container: rgb(67 69 89);
-  --md-sys-color-on-secondary-container: rgb(224 225 249);
-  --md-sys-color-tertiary: rgb(230 186 215);
-  --md-sys-color-on-tertiary: rgb(68 38 61);
-  --md-sys-color-tertiary-container: rgb(93 60 85);
-  --md-sys-color-on-tertiary-container: rgb(255 215 241);
-  --md-sys-color-error: rgb(255 180 171);
-  --md-sys-color-on-error: rgb(105 0 5);
-  --md-sys-color-error-container: rgb(147 0 10);
-  --md-sys-color-on-error-container: rgb(255 218 214);
-  --md-sys-color-background: rgb(18 19 24);
-  --md-sys-color-on-background: rgb(228 225 233);
-  --md-sys-color-surface: rgb(18 19 24);
-  --md-sys-color-on-surface: rgb(228 225 233);
-  --md-sys-color-surface-variant: rgb(70 70 79);
-  --md-sys-color-on-surface-variant: rgb(199 197 208);
-  --md-sys-color-outline: rgb(144 144 154);
-  --md-sys-color-outline-variant: rgb(70 70 79);
-  --md-sys-color-shadow: rgb(0 0 0);
-  --md-sys-color-scrim: rgb(0 0 0);
-  --md-sys-color-inverse-surface: rgb(228 225 233);
-  --md-sys-color-inverse-on-surface: rgb(48 48 54);
-  --md-sys-color-inverse-primary: rgb(82 90 146);
-  --md-sys-color-primary-fixed: rgb(222 224 255);
-  --md-sys-color-on-primary-fixed: rgb(11 21 75);
-  --md-sys-color-primary-fixed-dim: rgb(187 195 255);
-  --md-sys-color-on-primary-fixed-variant: rgb(58 67 121);
-  --md-sys-color-secondary-fixed: rgb(224 225 249);
-  --md-sys-color-on-secondary-fixed: rgb(24 26 44);
-  --md-sys-color-secondary-fixed-dim: rgb(195 197 221);
-  --md-sys-color-on-secondary-fixed-variant: rgb(67 69 89);
-  --md-sys-color-tertiary-fixed: rgb(255 215 241);
-  --md-sys-color-on-tertiary-fixed: rgb(45 18 40);
-  --md-sys-color-tertiary-fixed-dim: rgb(230 186 215);
-  --md-sys-color-on-tertiary-fixed-variant: rgb(93 60 85);
-  --md-sys-color-surface-dim: rgb(18 19 24);
-  --md-sys-color-surface-bright: rgb(57 57 63);
-  --md-sys-color-surface-container-lowest: rgb(13 14 19);
-  --md-sys-color-surface-container-low: rgb(27 27 33);
-  --md-sys-color-surface-container: rgb(31 31 37);
-  --md-sys-color-surface-container-high: rgb(41 41 47);
-  --md-sys-color-surface-container-highest: rgb(52 52 58);
-  --md-extended-color-warning-color: rgb(209 201 115);
-  --md-extended-color-warning-on-color: rgb(53 49 0);
-  --md-extended-color-warning-color-container: rgb(77 72 0);
-  --md-extended-color-warning-on-color-container: rgb(237 230 140);
-  --md-extended-color-success-color: rgb(148 213 169);
-  --md-extended-color-success-on-color: rgb(0 57 30);
-  --md-extended-color-success-color-container: rgb(13 81 48);
-  --md-extended-color-success-on-color-container: rgb(175 241 195);
-  --md-extended-color-alert-color: rgb(190 194 255);
-  --md-extended-color-alert-on-color: rgb(38 43 96);
-  --md-extended-color-alert-color-container: rgb(61 66 121);
-  --md-extended-color-alert-on-color-container: rgb(224 224 255);
+    --color-background: #060d1a;
+    --color-surface-low: #0b1526;
+    --color-surface: #142033;
+    --color-surface-high: #1e2b42;
+    --color-surface-modal: #273347;
+    --color-primary: #06bc6d;
+    --color-warning: #dbb910;
+    --color-error: #b2253d;
+    --color-error-container: rgba(178, 37, 61, 0.5);
+    --color-warning-container: rgba(219, 185, 16, 0.35);
+    --color-primary-container: rgba(6, 188, 109, 0.4);
+    --color-secondary: #19bbad;
+    --color-tertiary: #7754bd;
+    --color-secondary-container: rgba(25, 187, 173, 0.35);
+    --color-tertiary-container: rgba(119, 84, 189, 0.5);
+    --color-on-background: #8fbfab;
+    --color-on-surface-low: #a3ccbb;
+    --color-on-surface: #b8d9cb;
+    --color-on-surface-high: #d0e5dc;
+    --color-on-surface-modal: #e7f3ee;
+    --color-on-primary: #022717;
+    --color-on-secondary: #032c28;
+    --color-on-tertiary: #17043d;
+    --color-on-primary-container: #aee4cd;
+    --color-on-secondary-container: #c3eae6;
+    --color-on-tertiary-container: #dcd2f0;
+    --color-on-warning: #3c3307;
+    --color-on-error: #39040d;
+    --color-on-warning-container: #f0e7b9;
+    --color-on-error-container: #eec1c9;
+    --color-unactive: #505956;
 }
